FIX: slug field too short in admin media screen
git-svn-id: https://plugins.svn.wordpress.org/picasa-album-uploader/trunk@427582 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/picasa-album-uploader.css
+++ b/picasa-album-uploader.css
@@ -24,6 +24,10 @@
 /* = Admin Screen formatting = */
 /* =========================== */
 
+#pau_slug {
+	width: 15em;
+}
+
 .pau-debug-log {
 	margin: 5px ;
 	padding: 5px ;
